# streamlitdashboard

./: .gitignore  auto.py  import streamlit as st.py  laadpaal.py  main.ipynb  main.py  main_test.py  pyproject.toml  requirements.txt  test.ipynb
amsterdamverkeer/: auto.py  chargingtransactions.py  describedataplot.py  laadpalen_small.json  main.py  mapplot.py  otherplots.py  silas.ipynb  test.html
dashboard/: lib.py  main.py
elektrischeautos/: auto.py  loaddata.py  main.py  savedata.ipynb
israelpalastinecasualties/: Deaths.py  Forces.py  exploration.py  jan.py  jan2.py  load_data.py  locations copy.json  locations.json  main.py  mapplot.py  test.ipynb  util.py
