[tool.poetry]
name = "student-alcohol-consumption"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.0"
seaborn = "^0.12.2"
pandas = "^2.1.0"
plotly = "^5.17.0"
streamlit = "^1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
